<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/smoke"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.activity.CartActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        android:paddingTop="25dp"
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            app:title="My Cart"
            android:id="@+id/mtb"
            android:paddingTop="5dp"
            app:titleCentered="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/customToolbar"
            app:navigationIcon="@drawable/ic_arrow_back_24" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/cartEmptyTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/your_cart_is_empty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:indeterminateTint="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/abl"
        app:layout_constraintBottom_toTopOf="@id/totalLL"/>

    <LinearLayout
        android:id="@+id/totalLL"
        android:paddingVertical="13dp"
        android:paddingHorizontal="5dp"
        android:background="@color/red"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:textSize="15sp"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"/>

        <TextView
            android:textSize="17sp"
            android:id="@+id/totalTV"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/one_string_format"
            android:fontFamily="@font/comfortaa_medium"/>

        <TextView
            android:textSize="17sp"
            android:id="@+id/placeOrderTV"
            android:layout_marginEnd="5dp"
            android:text="@string/place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>