<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/smoke"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".presentation.ui.activity.OrderSuccessActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:paddingTop="25dp"
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            app:title="Success"
            app:titleCentered="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/customToolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/comfortaa_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/your_order_is_successfully_sent"/>

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/viewOrderTV"
        android:text="@string/view_order"
        android:background="@color/dark_green"
        app:layout_constraintWidth_percent="0.5"
        android:fontFamily="@font/comfortaa_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/closeTV"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/close"
        android:background="@color/dark_green"
        app:layout_constraintWidth_percent="0.5"
        android:fontFamily="@font/comfortaa_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>