<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="5dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:background="@drawable/bg_radius_5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        app:cardCornerRadius="5dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/productIV"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:text="@string/text"
        android:id="@+id/productNameTV"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/comfortaa_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv"
        app:layout_constraintStart_toEndOf="@id/cv" />

    <TextView
        android:textSize="17sp"
        android:id="@+id/productPriceTV"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_string_format"
        android:fontFamily="@font/comfortaa_medium"
        app:layout_constraintTop_toBottomOf="@id/productNameTV"
        app:layout_constraintStart_toStartOf="@id/productNameTV"/>

    <ImageView
        app:tint="@color/red"
        android:id="@+id/deleteIV"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_delete_24"
        android:contentDescription="@string/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:padding="2dp"
        android:gravity="center"
        android:layout_width="120dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:background="@drawable/bg_radius_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/productPriceTV">

        <ImageView
            android:padding="5dp"
            app:tint="@color/black"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/plusItemIV"
            android:src="@drawable/ic_add_24"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/text"
            android:background="@drawable/bg_radius_5" />

        <TextView
            android:id="@+id/pcsTV"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:text="@string/pcs_format"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_medium"/>

        <ImageView
            android:padding="8dp"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:id="@+id/minusItemIV"
            android:src="@drawable/minus"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/text"
            android:background="@drawable/bg_radius_5" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>